--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="EstacionamientoJava">
+    <wb-module deploy-name="ceiba-Estacionamiento">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
-        <property name="context-root" value="EstacionamientoJava"/>
-        <property name="java-output-path" value="/EstacionamientoJava/bin/default"/>
+        <property name="context-root" value="ceiba-Estacionamiento"/>
+        <property name="java-output-path" value="/ceiba-Estacionamiento/bin/default"/>
     </wb-module>
 </project-modules>
